--- a/HTML/club.html
+++ b/HTML/club.html
@@ -15,10 +15,10 @@
                 <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
             </a>
             <div id="desktop_menu">
-                <a class="link_button desktop_show orange_btn" id="boton_miembro">
+                <a href="/HTML/socios.html" class="link_button desktop_show orange_btn" id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a class="link_button desktop_show" id="boton_identificate">
+                <a href="/HTML/socios.html" class="link_button desktop_show" id="boton_identificate">
                     <img src="/public/assets/icons/Customer.svg" alt="">
                     Identifícate
                 </a>
@@ -46,11 +46,10 @@
                 </nav>
             </div>
         </div>
-        <div class="portada desktop_show">
-            <p class="desktop_hide">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
-                las ventajas e
-                inscríbete a
-                continuación</p>
+        <div class="portada portada_club">
+            <p class="texto_club">¡Bienvenido a la página del club de EivissaPadel! En esta página hablaremos sobre el
+                proyecto de EivissaPadel, cómo está enfocado y por qué estamos tan involucrados con la sostenibilidad y
+                la participación ciudadana.</p>
             <nav class="desktop_show">
                 <ul>
                     <li><a href="/HTML/club.html">El Club</a></li>
@@ -64,7 +63,115 @@
         </div>
     </header>
     <main id="club">
-        
+        <section class="asociacion">
+            <h2>La asociación</h2>
+            <div class="dos_fotos_texto">
+                <div class="dos_fotos">
+                    <div class="foto1"></div>
+                    <div class="foto2"></div>
+                </div>
+                    <p>
+                        EivissaPadel nació en 2006 de la mano de la asociación de vecinos de Sant Josep del barrio de
+                        Cova
+                        Santa. <br><br>El pádel es un deporte que estaba en ciernes y que acababa de llegar a la isla, y
+                        las
+                        pistas
+                        del ayuntamiento no estaban siendo gestionadas correctamente y no había ningún tipo de incentivo
+                        por
+                        parte de los responsables para fomentar su descubrimiento, así como observaron también una
+                        gestión
+                        derrochadora de los recursos del mismo, y fruto de esta necesidad, varios vecinos de la
+                        asociación
+                        fundaron el club de EivissaPadel.
+                    </p>
+            </div>
+            <div class="dos_fotos_texto">
+                <div class="dos_fotos">
+                    <div class="foto1"></div>
+                    <div class="foto2"></div>
+                </div>
+                <p>
+                    Sus objetivos estaban claros: dar a conocer este deporte así como la utilización responsable del
+                    material. <br><br>Empezaron con los eventos que repartían a vecinos, se ponían en contacto con el
+                    ayuntamiento para organizar torneos, comidas, reuniones con la comunidad donde se explicaba su
+                    intención y su compromiso medioambiental y con varios voluntarios empezaron a dar clases a niños y
+                    adultos que descubrían el deporte. <br><br>Poco a poco y conforme se iban incorporando más miembros,
+                    se pudo
+                    implementar la tienda, orientada a compartir y reutilizar el material deportivo para así fomentar el
+                    consumo responsable.
+                </p>
+            </div>
+        </section>
+        <a href="" class="blue_btn link_button">¡Quiero ser Socio!</a>
+        <section class="organizacion">
+            <h2>¿Como estamos organizados?</h2>
+            <div class="cinco_fotos">
+                <div class="foto1"></div>
+                <div class="foto2"></div>
+                <div class="foto3"></div>
+                <div class="foto4"></div>
+                <div class="foto5"></div>
+            </div>
+            <p>
+                A pesar de trabajar codo a codo con el ayuntamiento, no pertenecemos a ninguna asociación superior,
+                somos un organismo independiente registrado que tiene acuerdos con otras estructuras para poder llevar a
+                cabo sus actividades.
+                <br>
+                <br>
+                El presidente del club es Jaume Bufí, vecino del pueblo de Sant Josep e impulsor de la creación de
+                EivissaPadel.
+                <br>
+                <br>
+                La junta directiva está formada por 4 vecinos que también son miembros fundadores: Pepita Marí, Carolina
+                Serra, Estefanía Torres y Joan Fita, que participan activamente en la gestión del equipo y están al
+                corriente de todo el movimiento del club.
+                <br>
+                <br>
+                El resto de miembros de la estructura organizativa del club son los socios que participan en las
+                votaciones y colaboran y se involucran en la medida de lo que deseen en la gestión del club. A día de
+                hoy contamos con 52 miembros que forman parte de nuestro club sin ánimo de lucro, ¡y esperamos que el
+                número siga creciendo conforme crece el club!
+            </p>
+        </section>
+        <section class="compromiso_medioambiental">
+            <div class="titulo_compromiso">
+                <h2>Compromiso Medioambiental</h2>
+            </div>
+            <p>
+                Desde EivissaPadel queremos dar a conocer nuestro compromiso ya que nos lo tomamos muy en serio. La
+                tienda nace de este mismo hecho: todos los productos son de segunda mano para contribuir a la
+                sostenibilidad y la participación y concienciación de los miembros. <br><br>
+                Así, demostramos que un material en
+                buenas condiciones es tan útil como uno a estrenar pero tiene más ventajas.
+                <br><br>
+                Además, en la tienda vendemos botellas de agua de cristal que pueden ser rellenadas de forma gratuita en
+                el grifo del club, las luces de las pistas se encienden siempre de forma manual según la necesidad
+                ambiental y son modulables al respecto, y toda la comida que no se sirve en los eventos se dona a los
+                comedores locales.
+            </p>
+            <div class="cinco_fotos">
+                <div class="foto1"></div>
+                <div class="foto2"></div>
+                <div class="foto3"></div>
+                <div class="foto4"></div>
+                <div class="foto5"></div>
+            </div>
+            <p>
+                A pesar de ser un club eminentemente deportivo, mensualmente enviamos una NewsLetter a los socios
+                informándoles de como pueden contribuir con el club y con el medioambiente así como estamos disponibles
+                para resolver cualquier duda que tengan al respecto.
+                <br><br>
+                En nuestro eventos siempre abanderamos el mensaje de concienciación y predicamos con el ejemplo
+                (evitamos el material desechable, gestionamos los residuos con respeto...). También trabajamos con
+                organizaciones medioambientales más grandes a las que les permitimos usar el club como plataforma de
+                distribución de su mensaje en la newsletter y en paneles informativos a la puerta del club.
+                <br><br>
+                Nuestra intención es seguir creciendo y poder hacer más eventos relacionados, para lo cual necesitamos
+                aumentar la colaboración ciudadana, la colaboración de nuevos miembros trae nuevas ideas y estamos
+                deseosos de aumentar nuestras actividades ¿nos ayudarás?
+            </p>
+        </section>
+        <a href="" class="orange_btn link_button">¡Quiero ser Socio!</a>
     </main>
     <footer>
         <div class="footer_container">
@@ -84,6 +191,7 @@
                 </div>
             </div>
         </div>
-    </footer></body>
+    </footer>
+</body>
 
 </html>
