--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,10 +15,10 @@
                 <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="">
             </a>
             <div id="desktop_menu">
-                <a class="link_button desktop_show orange_btn" id="boton_miembro">
+                <a href="/HTML/socios.html" class="link_button desktop_show orange_btn" id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a class="link_button desktop_show" id="boton_identificate">
+                <a href="/HTML/socios.html" class="link_button desktop_show" id="boton_identificate">
                     <img src="/public/assets/icons/Customer.svg" alt="">
                     Identifícate
                 </a>
