--- a/HTML/index.html
+++ b/HTML/index.html
@@ -66,7 +66,7 @@
     <main id="home">
         <section id="home_socios">
             <div id="socios_btn" class="desktop_hide dos_botones">
-                <a class="link_button blue_btn">Inicia Sesión</a>
+                <a href="/HTML/socios.html" class="link_button blue_btn">Inicia Sesión</a>
                 <a href="/HTML/socios.html" class="link_button blue_btn">Hazte Miembro</a>
             </div>
             <h3 class="desktop_hide">Ventajas de ser miembro</h3>
@@ -184,18 +184,18 @@
             </div>
         </section>
         <div id="reserva_clases" class="dos_botones">
-            <a class="link_button blue_btn">Reserva Pista</a>
-            <a class="link_button blue_btn">Clases</a>
+            <a href="#" class="link_button blue_btn">Reserva Pista</a>
+            <a href="#" class="link_button blue_btn">Clases</a>
         </div>
         <section id="home_club">
             <h2>El Club</h2>
             <div id="botones_dedo">
                 <div class="imagen_club desktop_show">
                 </div>
-                <a class="link_button">
+                <a href="/HTML/club.html#asociacion" class="link_button">
                     <p>La asociación</p><img src="/public/assets/icons/HandCursor.svg" alt="">
                 </a>
-                <a class="link_button">
+                <a href="/HTML/club.html#compromiso_medioambiental" class="link_button">
                     <p> Compromiso <br>medioambiental</p><img src="/public/assets/icons/HandCursor.svg" alt="">
                 </a>
             </div>
@@ -234,10 +234,14 @@
     <footer>
         <div class="footer_container">
             <div id="links">
-                <img src="/public/assets/icons/YouTube.png" alt="">
-                <img src="/public/assets/icons/Instagram.png" alt="">
-                <img src="/public/assets/icons/TwitterX.png" alt="">
-                <img src="/public/assets/icons/Facebook.png" alt="">
+                <a href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                </a>
             </div>
             <div class="footer_desktop">
                 <div>
