--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -97,7 +97,7 @@
                     un estilo de vida activo.
                 </p>
             </section>
-            <a class="blue_btn link_button">Quiero saber más sobre el club</a>
+            <a href="/HTML/club.html" class="blue_btn link_button">Quiero saber más sobre el club</a>
         </section>
         <section id="inscripcion">
             <h2>Inscripción al club</h2>
@@ -122,18 +122,18 @@
                         hablaremos contigo para cerrar los detalles:</p>
                     <div class="dos_niveles">
                         <div class="dos_check">
-                            <div><input type="checkbox" value="">
+                            <div><input type="checkbox" name="frecuencia" value="">
                                 <p>1 vez al día</p>
                             </div>
-                            <div><input type="checkbox" value="">
+                            <div><input type="checkbox" name="frecuencia" value="">
                                 <p>1 vez a la semana</p>
                             </div>
                         </div>
                         <div class="dos_check">
-                            <div><input type="checkbox" value="">
+                            <div><input type="checkbox" name="frecuencia" value="">
                                 <p>1 vez al mes</p>
                             </div>
-                            <div><input type="checkbox" value="">
+                            <div><input type="checkbox" name="frecuencia" value="">
                                 <p>Otros (escribir en el recuadro):</p>
                             </div>
                         </div>
@@ -186,17 +186,21 @@
             <form action="#" id="dudas">
                 <p>¿Tienes alguna duda, comentario o sugerencia? ¡Háznosla saber!</p>
                 <textarea name="mas_info" id="mas_info" cols="30" rows="10"></textarea>
-                <a class="link_button orange_btn">Aceptar</a>
+                <a href="#" class="link_button orange_btn">Aceptar</a>
             </form>
         </section>
     </main>
     <footer>
         <div class="footer_container">
             <div id="links">
-                <img src="/public/assets/icons/YouTube.png" alt="">
-                <img src="/public/assets/icons/Instagram.png" alt="">
-                <img src="/public/assets/icons/TwitterX.png" alt="">
-                <img src="/public/assets/icons/Facebook.png" alt="">
+                <a href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                </a>
             </div>
             <div class="footer_desktop">
                 <div>
