--- a/HTML/tienda.html
+++ b/HTML/tienda.html
@@ -66,7 +66,7 @@
     <main id="tienda">
         <div class="busqueda">
             <input placeholder="Busca aquí tu producto..." id="buscador" type="text" class="text">
-            <a href="">
+            <a href="#">
                 <img id="lupa" src="/public/assets/icons/Search.svg" alt="">
             </a>
         </div>
@@ -98,32 +98,32 @@
             </ul>
         </div>
         <div class="ofertas">
-            <div class="oferta1">
+            <a href="#" class="oferta1">
                 <div class="texto_oferta">¡Oferta!</div>
                 <div class="precio_oferta">
                     <p>88€</p>
                     <p>25€</p>
                 </div>
-            </div>
-            <div class="oferta2">
+            </a>
+            <a href="#" class="oferta2">
                 <div class="texto_oferta">¡Oferta!</div>
                 <div class="precio_oferta">
                     <p>55€</p>
                     <p>20€</p>
                 </div>
-            </div>
-            <div class="oferta3 desktop_show">
+            </a>
+            <a href="#" class="oferta3 desktop_show">
                 <div class="texto_oferta">¡Oferta!</div>
                 <div class="precio_oferta">
                     <p>15€</p>
                     <p>5€</p>
                 </div>
-            </div>
+            </a>
         </div>
         <section class="ultimos_productos">
             <h2>Últimos Productos</h2>
             <div class="banner_desktop">
-                <div class="banner banner_three">
+                <a href="#" class="banner banner_three">
                     <h4 class="encabezado_tienda desktop_hide">Pack: 3 Pelotas</h4>
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini desktop_show">Pack de 3 pelotas</h4>
@@ -136,8 +136,8 @@
                             disfrutará en su lugar.
                         </p>
                     </div>
-                </div>
-                <div class="banner banner_three">
+                </a>
+                <a href="#" class="banner banner_three">
                     <h4 class="encabezado_tienda desktop_hide">Pala de Pádel</h4>
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini desktop_show">Pala Pro de Padel</h4>
@@ -149,8 +149,8 @@
                             jugador, cambiada porque le han regalado una pala superior que se corresponde a su
                             categoría, así que no dejes pasar este ofertón, ¡no pasan a menudo!</p>
                     </div>
-                </div>
-                <div class="banner banner_three desktop_show">
+                </a>
+                <a href="#" class="banner banner_three desktop_show">
                     <h4 class="encabezado_tienda desktop_hide">Camiseta Blanca</h4>
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini desktop_show">Camiseta blanca</h4>
@@ -163,20 +163,24 @@
                             devolverla a la tienda ¡gracias por tu trabajo!
                         </p>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
         <div class="orange_100_btn">
-            <a class="link_button orange_btn">¡Vende tu producto!</a>
+            <a href="#" class="link_button orange_btn">¡Vende tu producto!</a>
         </div>
     </main>
     <footer>
         <div class="footer_container">
             <div id="links">
-                <img src="/public/assets/icons/YouTube.png" alt="">
-                <img src="/public/assets/icons/Instagram.png" alt="">
-                <img src="/public/assets/icons/TwitterX.png" alt="">
-                <img src="/public/assets/icons/Facebook.png" alt="">
+                <a href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                </a>
             </div>
             <div class="footer_desktop">
                 <div>
