--- a/HTML/club.html
+++ b/HTML/club.html
@@ -63,27 +63,27 @@
         </div>
     </header>
     <main id="club">
-        <section class="asociacion">
+        <section id="asociacion">
             <h2>La asociación</h2>
             <div class="dos_fotos_texto">
                 <div class="dos_fotos">
                     <div class="foto1"></div>
                     <div class="foto2"></div>
                 </div>
-                    <p>
-                        EivissaPadel nació en 2006 de la mano de la asociación de vecinos de Sant Josep del barrio de
-                        Cova
-                        Santa. <br><br>El pádel es un deporte que estaba en ciernes y que acababa de llegar a la isla, y
-                        las
-                        pistas
-                        del ayuntamiento no estaban siendo gestionadas correctamente y no había ningún tipo de incentivo
-                        por
-                        parte de los responsables para fomentar su descubrimiento, así como observaron también una
-                        gestión
-                        derrochadora de los recursos del mismo, y fruto de esta necesidad, varios vecinos de la
-                        asociación
-                        fundaron el club de EivissaPadel.
-                    </p>
+                <p>
+                    EivissaPadel nació en 2006 de la mano de la asociación de vecinos de Sant Josep del barrio de
+                    Cova
+                    Santa. <br><br>El pádel es un deporte que estaba en ciernes y que acababa de llegar a la isla, y
+                    las
+                    pistas
+                    del ayuntamiento no estaban siendo gestionadas correctamente y no había ningún tipo de incentivo
+                    por
+                    parte de los responsables para fomentar su descubrimiento, así como observaron también una
+                    gestión
+                    derrochadora de los recursos del mismo, y fruto de esta necesidad, varios vecinos de la
+                    asociación
+                    fundaron el club de EivissaPadel.
+                </p>
             </div>
             <div class="dos_fotos_texto">
                 <div class="dos_fotos">
@@ -102,7 +102,7 @@
                 </p>
             </div>
         </section>
-        <a href="" class="blue_btn link_button">¡Quiero ser Socio!</a>
+        <a href="/HTML/socios.html" class="blue_btn link_button">¡Quiero ser Socio!</a>
         <section class="organizacion">
             <h2>¿Como estamos organizados?</h2>
             <div class="cinco_fotos">
@@ -133,7 +133,7 @@
                 número siga creciendo conforme crece el club!
             </p>
         </section>
-        <section class="compromiso_medioambiental">
+        <section id="compromiso_medioambiental">
             <div class="titulo_compromiso">
                 <h2>Compromiso Medioambiental</h2>
             </div>
@@ -171,15 +171,19 @@
                 deseosos de aumentar nuestras actividades ¿nos ayudarás?
             </p>
         </section>
-        <a href="" class="orange_btn link_button">¡Quiero ser Socio!</a>
+        <a href="/HTML/socios.html" class="orange_btn link_button">¡Quiero ser Socio!</a>
     </main>
     <footer>
         <div class="footer_container">
             <div id="links">
-                <img src="/public/assets/icons/YouTube.png" alt="">
-                <img src="/public/assets/icons/Instagram.png" alt="">
-                <img src="/public/assets/icons/TwitterX.png" alt="">
-                <img src="/public/assets/icons/Facebook.png" alt="">
+                <a href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                </a>
+                <a href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                </a>
             </div>
             <div class="footer_desktop">
                 <div>
