--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Become a Member</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 
@@ -109,10 +109,10 @@
             <div class="desktop_3_form">
                 <form action="#" id="datos_personales">
                     <h3>Datos personales</h3>
-                    <label for="name">Nombre y Apellidos</label>
-                    <input type="text" name="name" id="name">
-                    <label for="postal">Dirección Postal</label>
-                    <input type="text" name="postal" id="postal">
+                    <label for="name_and_surname">Nombre y Apellidos</label>
+                    <input type="text" name="name_and_surname" id="name">
+                    <label for="postal_adress">Dirección Postal</label>
+                    <input type="text" name="postal_adress" id="postal">
                     <label for="birth_date">Fecha de Nacimiento</label>
                     <input type="date" name="birth_date" id="birth_date">
                 </form>
@@ -122,7 +122,7 @@
                         hablaremos contigo para cerrar los detalles:</p>
                     <div class="dos_niveles">
                         <div class="dos_check">
-                            <div><input type="checkbox" name="frecuencia" value="">
+                            <div><input type="checkbox" name="frecuencia_" value="">
                                 <p>1 vez al día</p>
                             </div>
                             <div><input type="checkbox" name="frecuencia" value="">
